--- a/start.html
+++ b/start.html
@@ -14,6 +14,7 @@
         <h3>New blog</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis eius odit quas corporis pariatur aliquid dicta non commodi voluptatem. Architecto, minima! Voluptates architecto ea harum officiis sunt animi accusantium maxime.</p>
     </div>
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos qui, veritatis tempora facere eius dolorem, accusamus provident amet ducimus, dolorum nisi excepturi magnam reprehenderit. Quos vel ut eum cum officia?</h3>
     
 </body>
 </html>
